Thu Aug  9 23:39:02 2001  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Remembered some things I changed a while back and didn't put in
	here, but they need to be in here or I'll forget forever.
	* Fixed a race with multiple webcam-viewing feh instances by
	adding feh PID to the tmp filename used to cache the downloaded
	images. Other fixups to the remote-getting code.

Thu Aug  9 23:16:58 2001  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Load menu font just once and keep it around.
	* New menu backgrounds.
	* Fix detection of bad fonts.
	* Allow use of --fontpath multiple times to add many paths
	to the fontpath.

Thu Aug  9 22:45:05 2001  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Progressive loading is gone. It's useless in imlib2 because
	imlib2 can't load from filehandles, it's real application is
	gone. Plus people say without seeing the image load it "feels"
	faster. This also simplifies a bunch of code and I feel cleaner
	without it.
	* Less pointless redraws, should be faster switching images now.
	* Other bits.

Thu Feb 15 11:25:45 2001  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* A patch from labisso (David LaBissoniere <labiss@usit.net>)
      to allow pausing of slideshows. Handy.

Sun Jan 28 13:20:45 2001  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* cam was using -Cwebcam, should be -Twebcam
	* default generated ~/.fehrc used --keep-http in webcam mode, this
	is probably not what most people want for the default, so I
	removed it. Either blow away your ~/.fehrc or make this change
	yourself to get it....
	* Maybe fixed a memleak. I hope so, but it will take 3 days of
	running cam to find out :-)
	* After an idea and partial patch from KainX, added -G,
	--wget-timestamp to use wget timestamping when downloading http
	images. Useful when watching webcams, the idea is that wget only
	downloads the webcam if it has changed since the last time. Nice
	bandwidth saver. However, there is currently a bug in wget that