@@ -569,12 +569,7 @@ init_thumbnail_mode(void)
       }
    }
 
-   if (opt.display)
-   {
-      winwid = winwidget_create_from_image(im_main, s, WIN_TYPE_THUMBNAIL);
-      winwidget_show(winwid);
-   }
-   else
+   if (!opt.display)
       feh_imlib_free_image_and_decache(im_main);
 
    free(s);
